--- a/Drip/Pages/Home.razor
+++ b/Drip/Pages/Home.razor
@@ -2,12 +2,12 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<div class="drip-page-content">
+    <h1>Hello, world!</h1>
 
-Welcome to your new app.
+    Welcome to your new app.
 
-<button type="button" onclick="document.documentElement.classList.toggle('dark')">
-    Toggle Dark Mode
-</button>
-
-<input type="text" placeholder="test..." />
+    <div>
+        <input type="text" placeholder="test..." />
+    </div>
+</div>
