--- a/Drip/_Imports.razor
+++ b/Drip/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Drip
+@using Drip.Components
 @using Drip.Layout
