--- a/Drip/Layout/MainLayout.razor.css
+++ b/Drip/Layout/MainLayout.razor.css
@@ -1,5 +1,9 @@
 ﻿.drip-layout {
     --drip-topbar-height: 50px;
+    --drip-sidebar-width: 100%;
+}
+
+.drip-layout {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -15,22 +19,62 @@
     height: var(--drip-topbar-height);
 }
 
-.drip-topbar ::deep .drip-button {
+.drip-topbar ::deep .drip-button,
+.drip-sidebar ::deep .drip-button {
     height: calc(var(--drip-topbar-height) - 0.625rem);
     margin-right: 0.3125rem;
 }
 
-.drip-topbar ::deep .drip-icon-button {
+.drip-topbar ::deep .drip-icon-button,
+.drip-sidebar ::deep .drip-icon-button {
     width: calc(var(--drip-topbar-height) - 0.625rem);
 }
 
-.drip-main-content {
+.drip-body-layout {
     padding-top: var(--drip-topbar-height);
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+}
+
+.drip-sidebar {
+    background: var(--drip-background-secondary);
+    transform: translateY(-100%);
+    height: 100%;
+    position: fixed;
+    width: var(--drip-sidebar-width);
+    transition: transform 0.25s ease-in-out;
+    top: 0;
+}
+
+.drip-sidebar.open {
+    transform: translateY(0);
+}
+
+.drip-main-content {
     flex-grow: 1;
 }
 
-@media (min-width: var(--drip-breakpoint-lg)) {
+@media (min-width: 992px) {
     .drip-layout {
         --drip-topbar-height: 64px;
+        --drip-sidebar-width: 300px;
+    }
+    
+    .drip-sidebar {
+        background: var(--drip-background);
+        transform: translateY(0);
+        top: var(--drip-topbar-height);
+        border-right: 2px solid var(--drip-border-tertiary);
+        transition: unset;
+    }
+
+    ::deep #dripSideBarMenuToggler {
+        display: none;
+    }
+
+    .drip-main-content {
+        padding-left: var(--drip-sidebar-width);
     }
 }
