Implement dark mode and sidebar toggle functionality; refactor related components and styles for improved layout

--- a/Drip/Components/SideBarContent/DripSideBarContent.razor
+++ b/Drip/Components/SideBarContent/DripSideBarContent.razor
@@ -1,5 +1,3 @@
 ﻿@namespace Drip.Components
 
-<DripIconButton id="dripSideBarMenuToggler" onclick="document.getElementById('dripSideBar').classList.toggle('open')">
-    @DripIcons.Close()
-</DripIconButton>
+<p>hey</p>
