--- a/Drip/Layout/MainLayout.razor
+++ b/Drip/Layout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="drip-layout">
+<div id="dripLayout" class="drip-layout">
     <div class="drip-topbar">
         <DripTopBarContent />
     </div>
