--- a/Drip/Components/TopBarContent/DripTopBarContent.razor
+++ b/Drip/Components/TopBarContent/DripTopBarContent.razor
@@ -2,12 +2,12 @@
 
 <div class="drip-topbar-content">
     <div class="drip-topbar-content-start">
-        <DripIconButton id="dripSideBarMenuToggler" onclick="document.getElementById('dripSideBar').classList.toggle('open')">
+        <DripIconButton id="dripSideBarMenuToggler" onclick="toggleSidebar()">
             @DripIcons.HamburgerMenu()
         </DripIconButton>
     </div>
     <div class="drip-topbar-content-end">
-        <DripIconButton id="dripThemeToggler" onclick="document.documentElement.classList.toggle('dark')">
+        <DripIconButton id="dripThemeToggler" onclick="toggleDarkMode()">
             @DripIcons.Moon()
         </DripIconButton>
     </div>
