--- a/Drip/Layout/MainLayout.razor.css
+++ b/Drip/Layout/MainLayout.razor.css
@@ -17,12 +17,13 @@
     left: 0;
     right: 0;
     height: var(--drip-topbar-height);
+    z-index: 1000;
 }
 
 .drip-topbar ::deep .drip-button,
 .drip-sidebar ::deep .drip-button {
     height: calc(var(--drip-topbar-height) - 0.625rem);
-    margin-right: 0.3125rem;
+    margin-inline: 0.3125rem;
 }
 
 .drip-topbar ::deep .drip-icon-button,
@@ -36,19 +37,21 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
+    position: relative;
 }
 
 .drip-sidebar {
     background: var(--drip-background-secondary);
     transform: translateY(-100%);
-    height: 100%;
-    position: fixed;
+    position: absolute;
     width: var(--drip-sidebar-width);
-    transition: transform 0.25s ease-in-out;
-    top: 0;
+    top: var(--drip-topbar-height);
+    bottom: 0;
+    padding: 1rem;
+    transition: transform 0.15s ease-in;
 }
 
-.drip-sidebar.open {
+.sidebar-open-mobile .drip-sidebar {
     transform: translateY(0);
 }
 
@@ -67,14 +70,19 @@
         transform: translateY(0);
         top: var(--drip-topbar-height);
         border-right: 2px solid var(--drip-border-tertiary);
-        transition: unset;
     }
-
-    ::deep #dripSideBarMenuToggler {
-        display: none;
-    }
-
+    
     .drip-main-content {
         padding-left: var(--drip-sidebar-width);
+        transition: padding 0.15s ease-in-out;
+    }
+    
+    .sidebar-closed-desktop .drip-sidebar {
+        transform: translateX(calc(-1 * var(--drip-sidebar-width)));
+        width: 0;
+    }
+
+    .sidebar-closed-desktop .drip-main-content {
+        padding-left: 0;
     }
 }
