--- a/Drip/_Imports.razor
+++ b/Drip/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Microsoft.OpenApi.Models
 @using Drip
 @using Drip.Components
 @using Drip.Layout
