--- a/Drip/_Imports.razor
+++ b/Drip/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Microsoft.OpenApi.Models
+@using Microsoft.OpenApi.Models.Interfaces
 @using Drip
 @using Drip.Components
 @using Drip.Layout
