--- a/Drip/_Imports.razor
+++ b/Drip/_Imports.razor
@@ -6,8 +6,10 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Microsoft.OpenApi
 @using Microsoft.OpenApi.Models
 @using Microsoft.OpenApi.Models.Interfaces
+@using Microsoft.OpenApi.Reader
 @using Drip
 @using Drip.Components
 @using Drip.Layout
