--- a/Drip/Layout/MainLayout.razor
+++ b/Drip/Layout/MainLayout.razor
@@ -14,7 +14,7 @@ else
                     <DripTopBarContent />
                 </div>
                 <div class="drip-body-layout">
-                    <aside id="dripSideBar" class="drip-sidebar">
+                    <aside class="drip-sidebar">
                         <DripSideBarContent/>
                     </aside>
                     <main class="drip-main-content">
