--- a/Drip/Pages/OperationDetail/OperationDetailPage.razor
+++ b/Drip/Pages/OperationDetail/OperationDetailPage.razor
@@ -1,4 +1,4 @@
-@page "/#tag/{TagName}/{Method}/{Path}"
+@page "/-/{TagName}/-/{Method}/-/{Path}"
 
 <p>Tag Name: @TagName</p>
 <p>Method: @Method</p>
