--- a/Drip/Components/TopBarContent/DripTopBarContent.razor
+++ b/Drip/Components/TopBarContent/DripTopBarContent.razor
@@ -2,7 +2,7 @@
 
 <div class="drip-topbar-content">
     <div class="drip-topbar-content-start">
-        <DripIconButton id="dripSideBarMenuToggler" onclick="toggleSidebar()">
+        <DripIconButton onclick="toggleSidebar()">
             @DripIcons.HamburgerMenu()
         </DripIconButton>
     </div>
